custom-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-custom-command
spec:
  containers:
    - name: hello
      image: alpine
      command: ['sh','-c','echo "Hello, Kubernetes!" && sleep 3600']
