deploymentwithrepllicas.yaml
#Creating ReplicaSets using a yaml file

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mydep
  name: mydep
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mydep
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mydep
    spec:
      containers:
      - image: httpd
        name: httpd
        ports:
        - containerPort: 80
