hpa-nginx.yaml

apiVersion: apps/v1 
kind: Deployment
metadata:
  name: hpa-nginx
  labels:
    app: hpa-nginx 
spec:
  replicas: 3 
  selector:
    matchLabels: 
      app: hpa-nginx
  template:
    metadata:
      name: nginxpod
      labels:
        app: hpa-nginx 
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          resources:
            requests:
              cpu: 100m


 #kubectl expose deployment hpa-nginx --port 80 
 #kubectl autoscale deployment hpa-nginx --max=10 --min=3 --cpu-percent=30
