initContainer.yaml
apiVersion: v1
kind: Pod
metadata:
        name: pod-with-initc
spec:
        containers:
                - image: nginx
                  name: nginx
                  ports:
                   - containerPort: 80
