mountpvinpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypvpod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/tmp/html"
        name: my-pvc
  volumes:
    - name: my-pvc
      persistentVolumeClaim:
        claimName: claim1
