mypod.yaml
apiVersion: v1
kind: Pod
metadata:
        name: mypod
        labels:
                env: prod
spec:
        containers:
                - image: nginx
                  name: mynginxcontainer
                  ports:
                   - containerPort: 80
        
        nodeSelector:
                env: prod

# kubectl apply -f <manifestfile.yaml>
# kubectl create -f /home/labsuser/kubernetes-data/mypod.yaml
