mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mysql-pod
spec:
  containers:
  - name: mysql
    image: mysql
