mysql-pod1.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mysql-pod
spec:
  containers:
  - name: mysql
    image: mysql
    volumeMounts:
    - name: config-file
      mountPath: /etc/mysql/conf.d
  volumes:
  - name: config-file
    configMap:
      name: mysql-config
      items:
      - key: max_packets.cnf
        path: max_allowed_packets.cnf
